--- a/simulador/MyForm.ui
+++ b/simulador/MyForm.ui
@@ -42,14 +42,39 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QLabel" name="label">
          <property name="text">
-          <string>Eliminar </string>
+          <string>Robot Seleccionat</string>
          </property>
         </widget>
        </item>
        <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Minimum</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>10</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
         <widget class="CustomComboBox" name="comboBox">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>10</height>
+          </size>
+         </property>
+         <property name="minimumContentsLength">
+          <number>0</number>
+         </property>
          <item>
           <property name="text">
            <string/>
@@ -60,39 +85,7 @@
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
-       <item>
-        <widget class="AfegirRobotButton" name="afegirRobot">
-         <property name="text">
-          <string>Afegir</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="spinBox">
-         <property name="maximum">
-          <number>29</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>X</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="spinBox_2"/>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Y</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <layout class="QHBoxLayout" name="horizontalLayout_4"/>
      </item>
      <item>
       <spacer name="verticalSpacer">
@@ -132,17 +125,6 @@
    </slots>
   </customwidget>
   <customwidget>
-   <class>AfegirRobotButton</class>
-   <extends>QPushButton</extends>
-   <header>AfegirRobotButton.h</header>
-   <slots>
-    <signal>crearRobot(int,int)</signal>
-    <slot>modificarPosicioY(int)</slot>
-    <slot>modificarPosicioX(int)</slot>
-    <slot>crearRobotSlot()</slot>
-   </slots>
-  </customwidget>
-  <customwidget>
    <class>CustomComboBox</class>
    <extends>QComboBox</extends>
    <header>CustomComboBox.h</header>
@@ -159,70 +141,6 @@
  <resources/>
  <connections>
   <connection>
-   <sender>spinBox</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>afegirRobot</receiver>
-   <slot>modificarPosicioX(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>694</x>
-     <y>376</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>635</x>
-     <y>375</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>spinBox_2</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>afegirRobot</receiver>
-   <slot>modificarPosicioY(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>770</x>
-     <y>363</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>635</x>
-     <y>363</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>afegirRobot</sender>
-   <signal>clicked()</signal>
-   <receiver>afegirRobot</receiver>
-   <slot>crearRobotSlot()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>635</x>
-     <y>363</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>635</x>
-     <y>363</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>afegirRobot</sender>
-   <signal>crearRobot(int,int)</signal>
-   <receiver>widget</receiver>
-   <slot>afegirRobot(int,int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>635</x>
-     <y>363</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>298</x>
-     <y>362</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>widget</sender>
    <signal>robotAfegit(int)</signal>
    <receiver>comboBox</receiver>
@@ -231,22 +149,6 @@
     <hint type="sourcelabel">
      <x>298</x>
      <y>362</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>756</x>
-     <y>330</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>pushButton_2</sender>
-   <signal>clicked()</signal>
-   <receiver>comboBox</receiver>
-   <slot>eliminarRobotSlot()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>663</x>
-     <y>43</y>
     </hint>
     <hint type="destinationlabel">
      <x>756</x>
